[package]
edition = "2021"
name = "pagesigner_verify"
version = "0.1.0"
[dependencies]
base64 = "*"
chrono = "*"
function_name = "*"
hex = "*"
hmac = "*"
lazy_static = "*"
num-bigint = "*"
pem = "*"
regex = "*"
ring = "*"
serde = "*"
serde_derive = "*"
serde_json = "*"
sha2 = "*"
snailquote = "*"
sxd-document = "*"
sxd-xpath = "*"
wasm-bindgen = "*"
xmltree = "*"

[dependencies.webpki]
features = ["alloc"]
version = "*"

[features]

[lib]
crate-type = ["cdylib", "rlib"]
